<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:background="@color/darkBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ExchangeActivity">

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutDateRanges"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:tabTextColor="@color/regularText"
            app:tabSelectedTextColor="@color/dollarBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.tabs.TabItem
                android:id="@+id/fiveDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_first"/>

        <com.google.android.material.tabs.TabItem
                android:id="@+id/oneMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_second"/>

        <com.google.android.material.tabs.TabItem
                android:id="@+id/threeMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_third"/>

        <com.google.android.material.tabs.TabItem
                android:id="@+id/sixMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_fourth"/>

        <com.google.android.material.tabs.TabItem
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_fifth"/>

    </com.google.android.material.tabs.TabLayout>

    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            app:layout_constraintTop_toBottomOf="@id/tabLayoutDateRanges"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/currentValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"/>

    <TextView
            android:id="@+id/currentValue"
            app:layout_constraintTop_toBottomOf="@id/lineChart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/selectedRate"
            android:layout_marginTop="@dimen/current_rate_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RatesText.Small"
            android:text="current value: € 1,32"
            tools:text="current vale: € 1,32"/>

    <TextView
            android:id="@+id/selectedRate"
            app:layout_constraintTop_toBottomOf="@id/currentValue"
            app:layout_constraintLeft_toRightOf="@id/symbol"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Enormous"
            android:text="1,49"
            tools:text="1,49"/>

    <TextView
            android:id="@+id/symbol"
            app:layout_constraintTop_toTopOf="@id/selectedRate"
            app:layout_constraintBottom_toBottomOf="@id/selectedRate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/selectedRate"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintVertical_bias="0.7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Small"
            android:text="@string/dollar"
            />

    <TextView
            android:id="@+id/dateSelected"
            app:layout_constraintTop_toBottomOf="@id/selectedRate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/titleAvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RatesText.Small"
            android:text="18-Abr-2019"
            tools:text="18-Abr-2019"/>

    <TextView
            android:id="@+id/titleMax"
            app:layout_constraintTop_toBottomOf="@id/dateSelected"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/titleMin"
            app:layout_constraintBottom_toTopOf="@id/valueMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Tittles"
            android:text="@string/str_max"/>

    <TextView
            android:id="@+id/titleMin"
            app:layout_constraintTop_toBottomOf="@id/dateSelected"
            app:layout_constraintLeft_toRightOf="@id/titleMax"
            app:layout_constraintRight_toLeftOf="@id/titleAvg"
            app:layout_constraintBottom_toTopOf="@id/valueMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Tittles"
            android:text="@string/str_min"/>

    <TextView
            android:id="@+id/titleAvg"
            app:layout_constraintTop_toBottomOf="@id/dateSelected"
            app:layout_constraintLeft_toRightOf="@id/titleMin"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/valueMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Tittles"
            android:text="@string/str_avg"/>

    <TextView
            android:id="@+id/valueMax"
            app:layout_constraintTop_toBottomOf="@id/titleMax"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/titleMin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/tittle_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Small"
            android:text="1,49"
            tools:text="1,49"/>

    <TextView
            android:id="@+id/valueMin"
            app:layout_constraintTop_toBottomOf="@id/titleMax"
            app:layout_constraintLeft_toRightOf="@id/titleMax"
            app:layout_constraintRight_toLeftOf="@id/titleAvg"
            app:layout_constraintBottom_toBottomOf="@id/valueMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Small"
            android:text="1,01"
            tools:text="1,01"/>

    <TextView
            android:id="@+id/valueAvg"
            app:layout_constraintTop_toBottomOf="@id/titleMax"
            app:layout_constraintLeft_toRightOf="@id/titleMin"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/valueMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RatesText.Small"
            android:text="1,29"
            tools:text="1,24"/>

</androidx.constraintlayout.widget.ConstraintLayout>